--- a/src/components/WagerModal/WagerModal.css
+++ b/src/components/WagerModal/WagerModal.css
@@ -69,4 +69,12 @@
   .cancel-button {
     background-color: #dc3545;
   }
+
+  .error-message {
+    color: red;
+    font-weight: bold;
+    font-size: 16px; /* Adjust the size as needed */
+    margin-top: 10px; /* Add some space above the message */
+  }
+  
   
