--- a/src/components/WagerModal/WagerModal.css
+++ b/src/components/WagerModal/WagerModal.css
@@ -8,7 +8,8 @@
   background: rgba(0, 0, 0, 0.7);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding-top:30px;
   z-index: 1000;
 }
 
