--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -1,7 +1,7 @@
 /* AdBanner.css */
 .ad-banner-container {
     position: fixed;
-    bottom: 0;
+    bottom: 10px;
     left: 0;
     width: 100%;
     background-color: #f9f9f900;
