--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -26,6 +26,7 @@
   
   .ad-caption {
     margin: 5px 0 0;
+    margin-bottom: 10px;
     font-size: 12px;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
