--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -7,26 +7,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0px;
+    padding: 5px;
     z-index: 100;
-    background-color: #333;
+    background-color: transparent;
   }
   
   .ad-banner {
     display: grid;
     grid-template-columns: 1fr 3fr; /* Caption takes 1 part, image/video takes 3 parts */
     align-items: center;
-    width: 100%;
-    max-width: 350px; /* Adjust based on your design */
-    background-color: #333; /* Background color for better visibility */
+    max-width: 350px; /* Propose a max width for the entire banner */
+    background-color: #333;
     padding: 8px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    max-height: 100px; /* Set a maximum height */
   }
   
   .ad-caption {
-    font-size: 10px; /* Reduce font size for better fit */
+    font-size: 10px;
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
@@ -39,8 +37,9 @@
   .ad-banner video {
     width: 100%;
     height: auto;
-    object-fit: contain; /* Ensure content scales properly */
-    max-height: 50px; /* Adjust for a compact height */
+    object-fit: contain;
+    max-width: 250px; /* Propose a max width for the image/video */
+    max-height: 80px; /* Propose a max height for the image/video */
     border-radius: 4px;
   }
   
@@ -49,7 +48,7 @@
     object-fit: contain;
   }
   
-  @media (max-width: 500px) {
+  @media (max-width: 768px) {
     .ad-banner {
       max-width: 100%;
       grid-template-columns: 1fr 2fr; /* Adjust for smaller screens */
