--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -7,7 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 8px;
+    padding-left: 4px;
     z-index: 100;
     background-color: #333;
   }
@@ -17,7 +17,7 @@
     grid-template-columns: 1.8fr 2.2fr; /* Caption takes 1 part, image/video takes 4 parts */
     align-items: center;
     max-width: 100%; /* Ensure it takes the full width */
-    padding: 8px;
+    padding-right: 4px;
     border-radius: 0px;
 
   }
@@ -27,7 +27,7 @@
     color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
-    padding-right: 8px;
+    padding-left: 4px;
     text-align: left;
     line-height: 1.2;
   }
