--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -18,6 +18,7 @@
     align-items: center;
     max-width: 100%; /* Ensure it takes the full width */
     padding-right: 8px;
+    padding-left:8px;
     border-radius: 0px;
 
   }
@@ -28,6 +29,7 @@
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     padding-left: 8px;
+    padding-right:8px;
     text-align: left;
     line-height: 1.2;
   }
