--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -1,56 +1,81 @@
-.ad-banner-container {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    max-width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-left: 4px;
-    z-index: 100;
-    background-color: #333;
-  }
-  
-  .ad-banner {
-    display: grid;
-    grid-template-columns: 1.8fr 2.2fr; /* Caption takes 1 part, image/video takes 4 parts */
-    align-items: center;
-    max-width: 100%; /* Ensure it takes the full width */
-    padding-right: 8px;
-    padding-left:4px;
-    border-radius: 0px;
+.ad-banner-wrapper {
+  width: 100%;
+}
 
+.ad-banner-container {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column; /* Stack the message and ad banner vertically */
+  align-items: center;
+  justify-content: center;
+  z-index: 100;
+  background-color: #333;
+}
+
+.ads-message-container {
+  text-align: left;
+  margin-bottom: 0px; /* Space between the message and the ad banner */
+  font-size: 12px;
+  color: #ffffffc1;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  border: 1px solid #ffffffc1; /* Border with a slightly transparent white color */
+  border-radius: 0px; /* Rounded corners for the border */
+  background-color: #660a78; /* Background color to further distinguish it */
+  width: 100%;
+}
+
+.ads-message-container a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+.ads-message-container a:hover {
+  text-decoration: underline;
+}
+
+
+.ad-banner {
+  display: grid;
+  grid-template-columns: 1.8fr 2.2fr; /* Caption takes 1 part, image/video takes 4 parts */
+  align-items: center;
+  max-width: 100%; /* Ensure it takes the full width */
+  padding-right: 8px;
+  padding-left: 4px;
+  border-radius: 0px;
+}
+
+.ad-caption {
+  font-size: 12px;
+  color: #ffffff;
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  padding-left: 8px;
+  padding-right: 4px;
+  text-align: left;
+  line-height: 1.2;
+}
+
+.ad-banner img,
+.ad-banner video {
+  width: 100%; /* Fully stretch to fill the container's width */
+  height: 50px; /* Fixed height for the banner content */
+  object-fit: fill; /* Stretch the content to completely fill the container */
+  border-radius: 4px;
+}
+
+.ad-banner-video {
+  pointer-events: none;
+  object-fit: fill;
+}
+
+@media (max-width: 768px) {
+  .ad-banner {
+    max-width: 100%;
+    grid-template-columns: 1.8fr 2.2fr; /* Adjust for smaller screens */
   }
-  
-  .ad-caption {
-    font-size: 12px;
-    color: #ffffff;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bold;
-    padding-left: 8px;
-    padding-right:4px;
-    text-align: left;
-    line-height: 1.2;
-  }
-  
-  .ad-banner img,
-  .ad-banner video {
-    width: 100%; /* Fully stretch to fill the container's width */
-    height: 50px; /* Fixed height for the banner content */
-    object-fit: fill; /* Stretch the content to completely fill the container */
-    border-radius: 4px;
-  }
-  
-  .ad-banner-video {
-    pointer-events: none;
-    object-fit: fill;
-  }
-  
-  @media (max-width: 768px) {
-    .ad-banner {
-      max-width: 100%;
-      grid-template-columns: 1.8fr 2.2fr; /* Adjust for smaller screens */
-    }
-  }
-  
+}
