--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -18,7 +18,7 @@
 
 .ads-message-container {
   text-align: left;
-  margin-bottom: 0px; /* Space between the message and the ad banner */
+  margin: 0; /* Remove any margin around the container */
   font-size: 12px;
   color: #ffffffc1;
   font-family: 'Roboto', sans-serif;
@@ -27,8 +27,10 @@
   border-radius: 0px; /* Rounded corners for the border */
   background-color: #660a78; /* Background color to further distinguish it */
   width: 100%;
-  padding-left:4px
+  padding: 0 8px; /* Remove vertical padding, keep horizontal padding */
+  line-height: 1; /* Adjust line-height to remove extra space inside */
 }
+
 
 .ads-message-container a {
   color: #ffffff;
