--- a/src/components/AdBanner/AdBanner.css
+++ b/src/components/AdBanner/AdBanner.css
@@ -17,7 +17,7 @@
 }
 
 .ads-message-container {
-  text-align: left;
+  text-align: center;
   margin: 0; /* Remove any margin around the container */
   font-size: 12px;
   color: #ffffffc1;
